--- a/jfx-03-inputs-outputs/src/com/jdc/controls/Controls.fxml
+++ b/jfx-03-inputs-outputs/src/com/jdc/controls/Controls.fxml
@@ -3,28 +3,62 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jdc.controls.Controls">
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jdc.controls.Controls">
    <children>
-      <Label rotate="-90.0" text="Controls Demo" translateX="-100.0" translateY="160.0">
-         <font>
-            <Font size="48.0" />
-         </font>
-      </Label>
-      <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="286.0" scaleX="1.6" scaleY="1.6" spacing="20.0" translateX="-100.0" HBox.hgrow="ALWAYS">
+      <HBox alignment="CENTER_LEFT" style="-fx-background-color: silver;">
          <children>
-            <Button id="SingleValueInputs" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadView" text="Single Value Inputs" />
-            <Button id="ListViews" layoutX="10.0" layoutY="244.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadView" text="List View" />
-            <Button layoutX="10.0" layoutY="267.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Combobox" />
-            <Button layoutX="10.0" layoutY="291.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Table Views" />
-            <Button layoutX="10.0" layoutY="314.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Sliders" />
+            <Label text="Input / Output Controls">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
          </children>
          <padding>
-            <Insets right="20.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
-      </VBox>
+      </HBox>
+      <GridPane hgap="20.0" vgap="20.0" VBox.vgrow="ALWAYS">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button id="SingleValueInputs" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadView" text="Single Input">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Button>
+            <Button id="ListViews" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadView" text="List View" GridPane.columnIndex="1">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Button>
+            <Button id="ComboBoxs" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadView" text="ComboBox" GridPane.rowIndex="1">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Button>
+            <Button id="TableViews" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadView" text="Table View" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Button>
+         </children>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+      </GridPane>
    </children>
-</HBox>
+</VBox>
