--- a/jfx-03-inputs-outputs/src/com/jdc/controls/ListViews.fxml
+++ b/jfx-03-inputs-outputs/src/com/jdc/controls/ListViews.fxml
@@ -33,8 +33,8 @@
             </VBox>
             <VBox layoutX="10.0" layoutY="10.0" prefWidth="300.0" spacing="10.0" HBox.hgrow="ALWAYS">
                <children>
-                  <TextField fx:id="objectnput" promptText="Name,, Phone, Email" />
-                  <ListView fx:id="objectListViiew" VBox.vgrow="ALWAYS" />
+                  <TextField fx:id="objectInput" promptText="Name,, Phone, Email" />
+                  <ListView fx:id="objectListView" VBox.vgrow="ALWAYS" />
                </children>
             </VBox>
          </children>
