Change Color Theme

--- a/jfx-04-accounting/src/com/jdc/accounting/views/application.css
+++ b/jfx-04-accounting/src/com/jdc/accounting/views/application.css
@@ -1,8 +1,8 @@
 * {
-	primary: #3e206d;
-	primary-light: #d89cf6;
-	secondary: #916dd5;
-	secondary-light: #f0e3ff;
+	primary: #333333;
+	primary-light: #e1f4f3;
+	secondary: #706c61;
+	secondary-light: #ffffff;
 }
 
 .text-field, 
