--- a/jfx-04-accounting/src/com/jdc/accounting/views/BalanceReport.fxml
+++ b/jfx-04-accounting/src/com/jdc/accounting/views/BalanceReport.fxml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="content-view" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Balance Report">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Label>
+      <HBox styleClass="header">
+         <children>
+            <Label text="Balance Report" />
+         </children>
+      </HBox>
+      <HBox styleClass="sp10">
+         <children>
+            <ComboBox prefWidth="150.0" promptText="Category" />
+            <TextField promptText="Employee" />
+            <DatePicker promptText="Date From" />
+            <DatePicker promptText="Date To" />
+            <Button mnemonicParsing="false" text="SEARCH" />
+            <Button layoutX="745.0" layoutY="10.0" mnemonicParsing="false" text="CLEAR" />
+         </children>
+      </HBox>
+      <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <columns>
+          <TableColumn maxWidth="120.0" minWidth="120.0" prefWidth="120.0" text="Date" />
+          <TableColumn maxWidth="160.0" minWidth="160.0" prefWidth="160.0" text="Employee" />
+            <TableColumn maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Category" />
+            <TableColumn maxWidth="140.0" minWidth="140.0" prefWidth="140.0" text="Incomes" />
+            <TableColumn maxWidth="140.0" minWidth="140.0" prefWidth="140.0" text="Expense" />
+            <TableColumn maxWidth="140.0" minWidth="140.0" prefWidth="140.0" text="Balance" />
+            <TableColumn minWidth="120.0" prefWidth="120.0" text="Description" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </VBox>
