--- a/jfx-04-accounting/src/com/jdc/accounting/views/EmployeeEdit.fxml
+++ b/jfx-04-accounting/src/com/jdc/accounting/views/EmployeeEdit.fxml
@@ -1,8 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" styleClass="popup-view" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jdc.accounting.views.EmployeeEdit">
+   <children>
+      <HBox styleClass="header">
+         <children>
+            <Label text="Edit Employee" />
+         </children>
+      </HBox>
+      <GridPane hgap="20.0" vgap="5.0">
+        <columnConstraints>
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="296.0" minWidth="10.0" prefWidth="182.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="429.0" minWidth="10.0" prefWidth="418.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label fx:id="message" text="Label" GridPane.columnIndex="1" />
+            <Label text="Employee Name" GridPane.rowIndex="1" />
+            <Label text="Employee Code" GridPane.rowIndex="2" />
+            <Label text="Role" GridPane.rowIndex="3" />
+            <Label text="Phone" GridPane.rowIndex="4" />
+            <Label text="Email" GridPane.rowIndex="5" />
+            <Label text="Address" GridPane.rowIndex="6" />
+            <TextField fx:id="name" promptText="Enter Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="code" promptText="Enter Code" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ComboBox fx:id="role" maxWidth="1.7976931348623157E308" prefWidth="150.0" promptText="Select Role" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="phone" promptText="Enter Phone" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="email" promptText="Enter Email" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextArea fx:id="address" prefHeight="200.0" prefWidth="200.0" promptText="Enter Address" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="6" GridPane.rowSpan="2" />
+            <HBox styleClass="sp5" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#close" text="CLOSE" />
+                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#save" text="SAVE" />
+               </children>
+            </HBox>
+         </children>
+         <padding>
+            <Insets right="60.0" top="10.0" />
+         </padding>
+      </GridPane>
+   </children>
+</VBox>
