--- a/jfx-04-accounting/src/com/jdc/accounting/views/EmployeeManagement.fxml
+++ b/jfx-04-accounting/src/com/jdc/accounting/views/EmployeeManagement.fxml
@@ -1,16 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="content-view" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jdc.accounting.views.EmployeeManagement">
    <children>
-      <Label text="Employee Management">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Label>
+      <HBox styleClass="header">
+         <children>
+            <Label text="Employee Management" />
+         </children>
+      </HBox>
+      <HBox styleClass="sp10">
+         <children>
+            <ComboBox fx:id="schRole" prefWidth="150.0" promptText="Role" />
+            <TextField fx:id="schCode" promptText="Search  Code" />
+            <TextField fx:id="schName" promptText="Search  Name" styleClass="wid-240" />
+            <Button mnemonicParsing="false" onAction="#search" text="SEARCH" />
+            <Button layoutX="593.0" layoutY="10.0" mnemonicParsing="false" onAction="#clear" text="CLEAR" />
+            <Button layoutX="723.0" layoutY="10.0" mnemonicParsing="false" onAction="#addNew" text="ADD NEW" />
+         </children>
+      </HBox>
+      <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <columns>
+            <TableColumn maxWidth="140.0" minWidth="140.0" prefWidth="140.0" text="Role" />
+          <TableColumn maxWidth="134.0" minWidth="134.0" prefWidth="134.0" text="Code" />
+          <TableColumn maxWidth="220.0" minWidth="220.0" prefWidth="220.0" text="Name" />
+            <TableColumn maxWidth="200.0" minWidth="140.0" prefWidth="160.0" text="Phone" />
+            <TableColumn maxWidth="300.0" minWidth="160.0" prefWidth="201.0" text="Email" />
+            <TableColumn maxWidth="500.0" minWidth="120.0" prefWidth="267.0" text="Address" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </VBox>
