--- a/jfx-04-accounting/src/com/jdc/accounting/views/BalanceDetails.fxml
+++ b/jfx-04-accounting/src/com/jdc/accounting/views/BalanceDetails.fxml
@@ -1,8 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
-
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="content-view" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jdc.accounting.views.BalanceDetails">
+   <children>
+      <HBox alignment="CENTER_LEFT" styleClass="header">
+         <children>
+            <Label fx:id="title" maxWidth="1.7976931348623157E308" text="Balance Summary" HBox.hgrow="ALWAYS" />
+            <Button mnemonicParsing="false" onAction="#save" text="SAVE" />
+         </children>
+      </HBox>
+      <GridPane vgap="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="180.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="180.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Employee Code" />
+            <Label text="Employee Name" GridPane.rowIndex="1" />
+            <Label text="Role" GridPane.rowIndex="2" />
+            <Label text="Business Date" GridPane.columnIndex="3" />
+            <Label text="Category" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label text="Total  Amount" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <TextField fx:id="empCode" editable="false" GridPane.columnIndex="1" />
+            <TextField fx:id="empName" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="empRole" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <DatePicker fx:id="businessDate" maxWidth="1.7976931348623157E308" GridPane.columnIndex="4" />
+            <ComboBox fx:id="category" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <TextField fx:id="total" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Label text="Remark" GridPane.rowIndex="3" />
+            <TextArea fx:id="remark" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" GridPane.rowSpan="2147483647" />
+         </children>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+      </GridPane>
+      <HBox styleClass="header">
+         <children>
+            <Label text="Details Informations" />
+         </children>
+      </HBox>
+      <HBox styleClass="sp10">
+         <children>
+            <TextField fx:id="inputTitle" promptText="Title" styleClass="wid-240" />
+            <TextField fx:id="inputAmount" promptText="Amount" />
+            <TextField fx:id="inputRemark" promptText="Remark" HBox.hgrow="ALWAYS" />
+            <Button mnemonicParsing="false" onAction="#add" text="Add" />
+         </children>
+      </HBox>
+      <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <columns>
+          <TableColumn maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="No" />
+          <TableColumn maxWidth="380.0" minWidth="380.0" prefWidth="380.0" text="Title" />
+            <TableColumn maxWidth="180.0" minWidth="180.0" prefWidth="180.0" text="Amount" />
+            <TableColumn prefWidth="75.0" text="Remark" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+   </children>
+</VBox>
