--- a/jfx-04-accounting/src/com/jdc/accounting/views/BalanceDetails.fxml
+++ b/jfx-04-accounting/src/com/jdc/accounting/views/BalanceDetails.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,6 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="content-view" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jdc.accounting.views.BalanceDetails">
    <children>
@@ -44,12 +44,12 @@
             <Label text="Role" GridPane.rowIndex="2" />
             <Label text="Business Date" GridPane.columnIndex="3" />
             <Label text="Category" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <TextField fx:id="category" GridPane.columnIndex="4" GridPane.rowIndex="1" />
             <Label text="Total  Amount" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <TextField fx:id="empCode" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="empName" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="empRole" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <DatePicker fx:id="businessDate" maxWidth="1.7976931348623157E308" GridPane.columnIndex="4" />
-            <ComboBox fx:id="category" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
             <TextField fx:id="total" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="2" />
             <Label text="Remark" GridPane.rowIndex="3" />
             <TextArea fx:id="remark" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" GridPane.rowSpan="2147483647" />
@@ -73,10 +73,26 @@
       </HBox>
       <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <columns>
-          <TableColumn maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="No" />
-          <TableColumn maxWidth="380.0" minWidth="380.0" prefWidth="380.0" text="Title" />
-            <TableColumn maxWidth="180.0" minWidth="180.0" prefWidth="180.0" text="Amount" />
-            <TableColumn prefWidth="75.0" text="Remark" />
+          <TableColumn maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="No">
+          	<cellValueFactory>
+          		<PropertyValueFactory property="no" />
+          	</cellValueFactory>
+          </TableColumn>
+          <TableColumn maxWidth="380.0" minWidth="380.0" prefWidth="380.0" text="Title" >
+          	<cellValueFactory>
+          		<PropertyValueFactory property="title" />
+          	</cellValueFactory>
+          </TableColumn>
+          <TableColumn maxWidth="180.0" minWidth="180.0" prefWidth="180.0" text="Amount" >
+          	<cellValueFactory>
+          		<PropertyValueFactory property="amount" />
+          	</cellValueFactory>
+          </TableColumn>
+          <TableColumn prefWidth="75.0" text="Remark" >
+          	<cellValueFactory>
+          		<PropertyValueFactory property="remark" />
+          	</cellValueFactory>
+          </TableColumn>
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
