--- a/jfx-04-accounting/src/com/jdc/accounting/views/BalanceManageMent.fxml
+++ b/jfx-04-accounting/src/com/jdc/accounting/views/BalanceManageMent.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -19,22 +19,40 @@
       </HBox>
       <HBox styleClass="sp10">
          <children>
-            <ComboBox fx:id="schCategory" prefWidth="150.0" promptText="Category" />
+            <TextField fx:id="schCategory" promptText="Category" HBox.hgrow="ALWAYS" />
             <TextField fx:id="schEmployee" promptText="Employee " />
             <DatePicker fx:id="dateFrom" promptText="Date From" />
             <DatePicker fx:id="dateTo" layoutX="343.0" layoutY="10.0" promptText="Date To" />
-            <Button mnemonicParsing="false" onAction="#search" text="SEARCH" />
-            <Button layoutX="833.0" layoutY="10.0" mnemonicParsing="false" onAction="#clear" text="CLEAR" />
             <Button layoutX="963.0" layoutY="10.0" mnemonicParsing="false" onAction="#addNew" text="ADD NEW" />
          </children>
       </HBox>
       <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <columns>
-          <TableColumn maxWidth="160.0" minWidth="160.0" prefWidth="160.0" text="Date" />
-          <TableColumn maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Employee" />
-            <TableColumn maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Category" />
-            <TableColumn maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Amount" />
-            <TableColumn prefWidth="203.0" text="Description" />
+            <TableColumn maxWidth="160.0" minWidth="160.0" prefWidth="160.0" text="Date">
+            	<cellValueFactory>
+            		<PropertyValueFactory property="date" />
+            	</cellValueFactory>
+            </TableColumn>
+            <TableColumn maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Employee">
+            	<cellValueFactory>
+            		<PropertyValueFactory property="employeeName" />
+            	</cellValueFactory>
+            </TableColumn>
+            <TableColumn maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Category">
+            	<cellValueFactory>
+            		<PropertyValueFactory property="category" />
+            	</cellValueFactory>
+            </TableColumn>
+            <TableColumn maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Amount">
+            	<cellValueFactory>
+            		<PropertyValueFactory property="total" />
+            	</cellValueFactory>
+            </TableColumn>
+            <TableColumn prefWidth="203.0" text="Description">
+            	<cellValueFactory>
+            		<PropertyValueFactory property="remark" />
+            	</cellValueFactory>
+            </TableColumn>
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
